force-app/main/default/objects/numm__VATRate__c/numm__VATRate__c.object-meta.xml
<CustomObject>
    <description>Objet des taux de tva</description>
    <label>Taux de TVA</label>
    <nameField>
        <label>Code TVA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taux de TVA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>