force-app/main/default/objects/numm__VATRate__c/fields/numm__Info_Facture__c.field-meta.xml
<CustomField>
    <fullName>numm__Info_Facture__c</fullName>
    <inlineHelpText>Texte affiché sur la facture si ce taux est l&#39;unique taux utilisé sur une facture</inlineHelpText>
    <label>Information sur la facture</label>
    <type>TextArea</type>
</CustomField>