force-app/main/default/objects/numm__VATRate__c/fields/numm__LessRate__c.field-meta.xml
<CustomField>
    <fullName>numm__LessRate__c</fullName>
    <inlineHelpText>Préciser le taux de déductibilité du prorata de TVA</inlineHelpText>
    <label>Taux prorata déductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>