force-app/main/default/objects/numm__VATRate__c/fields/numm__Prorata__c.field-meta.xml
<CustomField>
    <fullName>numm__Prorata__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher lorsque le code paramétré est un code de prorata de TVA</inlineHelpText>
    <label>Prorata</label>
    <type>Checkbox</type>
</CustomField>