force-app/main/default/objects/numm__VATRate__c/fields/numm__Taux_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_de_TVA__c</fullName>
    <inlineHelpText>Saisir le Taux de TVA correspondant</inlineHelpText>
    <label>Taux de TVA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>