force-app/main/default/objects/numm__VATRate__c/validationRules/numm__TxProrata_Obligatoire_Pour_Prorata.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__TxProrata_Obligatoire_Pour_Prorata</fullName>
    <active>true</active>
    <description>Le taux prorata déductible est obligatoire pour un taux de TVA de type prorata</description>
    <errorConditionFormula>AND(numm__Prorata__c=true, ISNULL(numm__LessRate__c) )</errorConditionFormula>
    <errorMessage>Le taux prorata déductible est obligatoire pour un taux de TVA de type prorata</errorMessage>
</ValidationRule>