force-app/main/default/objects/numm__VATRate__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__Prorata__c</columns>
    <columns>numm__Taux_de_TVA__c</columns>
    <columns>numm__LessRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>